Ref:refactor code

--- a/src/app/Form/dynamic-field/dynamic-field.component.html
+++ b/src/app/Form/dynamic-field/dynamic-field.component.html
@@ -1,4 +1,4 @@
-<div class="" *ngIf="form" [formGroup]="form">
+<div *ngIf="form" [formGroup]="form">
   <ng-container *ngIf="isMulti; else singleInput">
     <div class="mb-5" [formArrayName]="field.fieldName">
       <label class="me-2">{{ field.fieldName }}</label>
